--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "format": "npx prettier --write .",
@@ -12,12 +12,22 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "5.69.0",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "date-fns": "^3.6.0",
+    "clsx": "^2.1.1",
     "lucide-react": "0.484.0",
+    "motion": "^12.34.3",
     "next": "^15.5.9",
     "react": "19.0.0",
+    "react-day-picker": "^9.13.2",
     "react-dom": "19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
     "@eslint/js": "9.23.0",
@@ -40,9 +50,5 @@
     "tailwindcss": "4.0.17",
     "typescript": "5.5.4",
     "typescript-eslint": "8.0.0"
-  },
-  "overrides": {
-    "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3"
   }
 }
